# FedMed-ChRIS

./: .dockerignore  .gitignore  .gitmodules  Accuracy_loss_metrics_collection_code  Dockerfile  FastAPI_Main.py  README.md  Results of OpenFL Experimentation  acc_vs_collaborators  acc_vs_rounds  aiochris_testing.py  app.py  bastion_setup.md  bootstrap.sh  description.json  loss_vs_rounds  minichris.sh  refresh_image.sh  requirements.txt  run_tutorial.md  setup.py  trainingtime_vs_rounds
Docs/: ChrisRegistration.md  Customization.md  QuickStart.md
FedMed-ChRIS/: README.md
Flower/flower-pneumonia/: README.md  pyproject.toml
Flower/flower-pneumonia/flower_pneumonia/: client_app.py  server_app.py  task.py
MNIST_plugin_local/: .dockerignore  .gitignore  app.py  bootstrap.sh  requirements.txt
MNIST_root/: engine.py  main.py  main_MNIST.py  utils.py
cert/: cert_chain.crt  col_one.csr  col_two.csr
chris-flwr-test/: README.md  pyproject.toml
flwrDemo/: README.md
miniChRIS-docker/: chrisomatic.yml
minichris/: chrisomatic.yml  docker-compose.yml  orthanc.json
pipelines/: fedmed_fl_client.yml  fedmed_fl_server.yml  fedmed_fl_superlink.yml  fedmed_fl_supernode.yml  fedmed_fl_supernode_0.yml  fedmed_fl_supernode_1.yml  fedmed_fl_supernode_2.yml  fedmed_pl_supernode_2.yml
pl-chrNIST/: .gitignore  Dockerfile  README.md  app.py  setup.py
pl-superlink/: .gitignore  app.py  requirements.txt  setup.py
pl-supernode/: Dockerfile  app.py  requirements.txt
plugins/superlink_plugin/fedmed_flower_app/fedmed_flower_app/: __init__.py  client_app.py  core.py  pyproject.toml  server_app.py
plugins/superlink_plugin/fedmed_flower_app/fedmed_flower_app/certificates/: ca.key  ca.srl  server.key
python-chrisapp-pipeline-1/: app.py
python-chrisapp-pipeline-2/: app.py
python-chrisapp-template/: app.py  (+3 more)
python-chrisapp-template-main/: Dockerfile  app.py  compose.yml  image_app.py  plugin.json  refresh_image.sh
(+76 files in other folders)
